# test-task-telegram-planfix

./: docker-compose.yml  pyproject.toml
task/: api.py  app.py  database.py  models.py  telegram_handler.py  test.py  test_connect.py
task/templates/: base.html  index.html
